examples/test/testpolicy2183.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2183
  namespace: namespace230
spec:
  podSelector:
    matchLabels:
      key42: value28
      key0: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value15
          key12: value35
          key33: value31
      podSelector:
        matchLabels:
          key31: value8
          key34: value21
